--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-pdf": "^7.6.0",
+    "react-player": "^2.14.1",
     "react-scroll": "^1.9.0"
   },
   "devDependencies": {
